--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
 <!-- Her skal sidens indhold ligge -->
-<p>rød grød med fløde</p>
+<p>rød grød med fløde er fråderen</p>
 
 </body>
 </html>
